Updating the Hero on the docs side

--- a/packages/mermaid/src/docs/.vitepress/style/main.css
+++ b/packages/mermaid/src/docs/.vitepress/style/main.css
@@ -75,3 +75,9 @@ img.resizable-img {
     min-height: unset;
   }
 }
+
+a.link-home {
+  text-decoration: underline;
+  color: var(--vp-c-brand-1);
+  font-size: larger;
+}
